--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	  <main>
 		<section id="about">
 		  <h2>О нас</h2>
-		  <p class="about2">Привет меня зовут Абдибаит мне 16, моя мечта э.. прожить хорошую не нуждающийся жизнь и я зделаю все чтобы этого добится.<br>Так о чём мы, ах да я увлекаюсь програмированием довольно довно по моим меркам, с 12 лет и жить не могу без этого мне нравится все что с этим звязано а ткже мне нравится работа в команде я считаю себя душой компании в которую я вольюсь, о да я люблю обшение.<br><b> И да я ужастно люблю учится и учится</b></p>
+		  <p class="about2">Привет меня зовут Айганыш мне 16, моя мечта э.. прожить хорошую не нуждающийся жизнь и я зделаю все чтобы этого добится.<br>Так о чём мы, ах да я увлекаюсь програмированием довольно довно по моим меркам, с 12 лет и жить не могу без этого мне нравится все что с этим звязано а ткже мне нравится работа в команде я считаю себя душой компании в которую я вольюсь, о да я люблю обшение.<br><b> И да я ужастно люблю учится и учится</b></p>
 		</section>
 		<section id="news">
 		  <h2>Новости</h2> 
@@ -98,8 +98,8 @@
 		  <p>Контактная информация:</p>
 		  <ul>
 			<li>Адрес:с. Кыргызстан - г. Ош.</li>
-			<li>Телефон: +996-777-788-609</li>
-			<li>Gmail: ketareod@gmail.com</li>
+			<li>Телефон: +996-220-080-848</li>
+			<li>Gmail: ajganysajypova@gmail.com</li>
 		  </ul>
 		</address>
 	  </footer>
